@@ -3,6 +3,8 @@ Revision history for PostgreSQL extension pair.
 0.1.6
       - Made the tests collation-insensitive, so that failures won't occur for
         varying locales. Thanks to Daniele Varrazzo for the report.
+      - Updated the `Makefile` to reflect the recommended patterns from
+        pgsql-hackers. Thanks to Cédric Villemain for the details.
 
 0.1.5 2011-11-11T17:55:06Z
       - Removed the `$MODULES` variable from the `Makefile` to fix an
